test-app/node-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: node-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            component: node
    template:
        metadata:
            labels:
                component: node
        spec:
            containers:
                - name: node
                  image: dpmidyett/not-fancy:6a5a4463
                  ports:
                    - containerPort: 8082
