test-app/node-clusterip-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: node-clusterip-service
spec:
    type: ClusterIP
    selector: 
        component: node
    ports:
        - port: 8082
          targetPort: 8082
